--- a/src/style.css
+++ b/src/style.css
@@ -38,9 +38,9 @@ select {
   box-shadow: 0 30px 50px -20px rgb(50 50 93 / 25%), 0 30px 60px -30px rgb(0 0 0 / 30%);
 }
 
-.box-shadow{
+.box-shadow {
   box-shadow: 0 30px 100px -20px rgb(50 50 93 / 25%), 0 30px 60px -30px rgb(0 0 0 / 30%) !important
-  /* box-shadow: 4px 5px 4px 3px rgba(89, 4, 168, 0.137) !important; */
+    /* box-shadow: 4px 5px 4px 3px rgba(89, 4, 168, 0.137) !important; */
 
 }
 
@@ -64,6 +64,7 @@ select {
   border-radius: 10px;
 
 }
+
 /* styles.css */
 .blur-overlay {
   position: fixed;
@@ -76,8 +77,10 @@ select {
   pointer-events: none;
   z-index: 999;
 }
+
 .blur-backgroundd {
-  filter: blur(5px); /* Adjust the blur amount as needed */
+  filter: blur(5px);
+  /* Adjust the blur amount as needed */
 }
 
 .loader-container {
@@ -208,6 +211,10 @@ button:focus {
 }
 
 @media (max-width: 768px) {
+  .aboutt {
+    margin-bottom: -1000px;
+  }
+
   .custom-nav-link {
     margin-left: 0;
   }
@@ -222,6 +229,10 @@ button:focus {
 @media (max-width: 480px) {
   .custom-nav-link {
     margin-left: 0;
+  }
+
+  .aboutt {
+    margin-bottom: -1000px;
   }
 }
 
@@ -254,7 +265,15 @@ button:focus {
   opacity: 0.9 !important;
 }
 
+.aboutt {
+  margin-bottom: 0px;
+}
+
 @media (max-width: 767px) {
+  .aboutt {
+    margin-bottom: -1000px;
+  }
+
   .navbar {
     padding: 1rem 2rem !important;
     font-size: 1.4rem !important;
@@ -669,7 +688,7 @@ button:focus {
   color: white;
 
 }
- 
+
 
 @media (max-width: 767px) {
   .home-about-section-34 {
@@ -854,7 +873,7 @@ button:focus {
 @media (max-width: 767px) {
   .home-about-section-444421 {
 
- 
+
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
@@ -1021,6 +1040,7 @@ button:focus {
   text-align: left;
   font-family: "Teko";
 }
+
 .upsell {
 
   /* padding-top: 180px; */
@@ -1223,6 +1243,16 @@ button:focus {
 
 }
 
+.footerabout {
+  background-color: rgb(40, 10, 67);
+  bottom: 0 !important;
+  padding-top: 10px !important;
+  padding-bottom: 8px !important;
+  /* margin-top: 20px !important; */
+  margin-bottom: -22px !important;
+
+}
+
 .hj {
   margin-bottom: 0px;
 }
@@ -1261,7 +1291,20 @@ button:focus {
   text-align: center !important;
 }
 
+.herotext {
+  margin-top: -10px !important
+}
+
 @media (max-width: 767px) {
+  .herotext {
+    margin-top: 50px !important
+  }
+
+  .heroimg {
+    height: 300px;
+    width: 400px;
+  }
+
   .footer-copywright {
     text-align: center !important;
   }
@@ -1277,6 +1320,13 @@ button:focus {
 }
 
 .footer h3 {
+  font-size: 1em;
+  color: white !important;
+  margin-top: 0.5em !important;
+  margin-bottom: 0.5em !important;
+}
+
+.footerabout h3 {
   font-size: 1em;
   color: white !important;
   margin-top: 0.5em !important;
@@ -1441,19 +1491,25 @@ button:focus {
   padding-top: 110px !important;
 
 }
+
 /* ////////////////////////////////////////////////// */
 /* CSS for the container of the cards */
 .card-containerss {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between; /* Adjust this value to control spacing between cards */
+  justify-content: space-between;
+  /* Adjust this value to control spacing between cards */
 }
+
 @media (max-width: 600px) {
   .card-containerss {
-    margin-left: -4px; /* Apply negative margin to offset the left margin on cards */
+    margin-left: -4px;
+    /* Apply negative margin to offset the left margin on cards */
   }
+
   .cardss {
-    margin-left: 40px; /* Apply left margin of 4px on cards for mobile devices */
+    margin-left: 40px;
+    /* Apply left margin of 4px on cards for mobile devices */
   }
 }
 
@@ -1461,13 +1517,15 @@ button:focus {
 .cardss {
   display: flex;
   flex-direction: column;
-  height: 100%; /* This ensures that the cards take up the full height of the container */
+  height: 100%;
+  /* This ensures that the cards take up the full height of the container */
 }
 
 /* CSS to make the images stretch to cover the entire height */
 .cardss img {
   object-fit: cover;
-  height: 170px; /* You can adjust this value to control the image height */
+  height: 170px;
+  /* You can adjust this value to control the image height */
 }
 
 /* ////////////////////////////////////////////////// */
@@ -1605,6 +1663,7 @@ button:focus {
   color: white;
   z-index: -1;
 }
+
 .about-j {
 
   /* padding-bottom: 70px !important; */
