--- a/src/style.css
+++ b/src/style.css
@@ -165,9 +165,9 @@ button:focus {
 /* Navbar Section  */
 /* --------- */
 .sticky {
-  background-color: #989898 !important;
+  background-color: #330957 !important;
   transition: all 0.3s ease-out 0s !important;
-  box-shadow: 0px 10px 10px 0px rgba(219, 215, 13, 0.171) !important;
+  box-shadow: 0px 10px 10px 0px rgba(255, 251, 0, 0.171) !important;
   backdrop-filter: blur(15px) !important;
 }
 
@@ -176,7 +176,7 @@ button:focus {
   transition: all 0.3s ease-out 0s !important;
   padding: 0.3rem 2rem !important;
   font-size: 1.2rem !important;
-  background-color: #989898;
+  background-color: #280A43;
 
 }
 
